<resources>
    <string name="app_name">POT!</string>

    <!-- 기본적으로 제공된 문자열 -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 각 카테고리 이름 -->
    <string name="exercise_pot">Exercise Pot</string>
    <string name="taxi_pot">Taxi Pot</string>
    <string name="study_pot">Study Pot</string>
    <string name="meal_pot">Meal Pot</string>

    <!-- 유저 아이콘 설명 -->
    <string name="user_icon">User Icon</string>
    <string name="my_page">My Page</string>

    <!-- 뒤로가기 아이콘 설명 -->
    <string name="back_icon">Back Icon</string>

    <!-- 하단 네비게이션 설명 -->
    <string name="home_icon">Home</string>
    <string name="board_icon">Board</string>
    <string name="chat_icon">Chat</string>
</resources>
