<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/write"
    tools:context=".ui.theme.fragment.WriteFragment">


    <ImageView
        android:id="@+id/imgHomeIcon"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:contentDescription="@string/home_icon"
        android:src="@drawable/home_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgBoardIcon"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- 하단 메뉴 Board 아이콘 -->
    <ImageView
        android:id="@+id/imgBoardIcon"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:contentDescription="@string/board_icon"
        android:src="@drawable/board_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgChatIcon"
        app:layout_constraintStart_toEndOf="@id/imgHomeIcon" />

    <!-- 하단 메뉴 Chat 아이콘 -->
    <ImageView
        android:id="@+id/imgChatIcon"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:contentDescription="@string/chat_icon"
        android:src="@drawable/chat_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgBoardIcon" />

    <ImageView
        android:id="@+id/saveButton"
        android:layout_width="57dp"
        android:layout_height="33dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/complete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="380dp"
        android:layout_height="634dp"
        android:layout_marginTop="116dp"
        android:background="@null"
        android:fontFamily="@font/gmarket_sans_light"
        android:gravity="top|start"
        android:hint="여기에 글을 입력하세요."
        android:inputType="textMultiLine"
        android:lines="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="33dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/back_icon"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>